<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/primary">
        <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_world"
            android:title="@string/world" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/ic_science"

            android:title="@string/science" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_sport"
            android:title="@string/sport" />
        <item
            android:id="@+id/nav_environment"
            android:icon="@drawable/ic_environment"
            android:title="@string/environment" />
        <item
            android:id="@+id/nav_society"
            android:icon="@drawable/ic_society"
            android:title="@string/society" />
        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/ic_fashion"
            android:title="@string/fashion" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business"
            android:title="@string/business" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_culture"
            android:title="@string/culture" />
    </group>

    <group>

        <item
            android:id="@+id/account_fragment"
            android:icon="@drawable/ic_account"
            android:title="@string/account_fragment" />

    </group>

</menu>