<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="2"
            android:padding="@dimen/default_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_sample" />

        <TextView
            android:id="@+id/news_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@id/news_image_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_title"
            tools:text="@string/technology" />

        <TextView
            android:id="@+id/news_description"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:maxLines="5"
            android:minLines="5"
            android:padding="@dimen/default_padding"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@+id/news_image_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_category"
            tools:text="@string/text_sample" />

        <androidx.cardview.widget.CardView
            android:id="@+id/news_image_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/default_padding"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@id/news_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/news_description"
            app:layout_constraintTop_toTopOf="@id/news_category">

            <ImageView
                android:id="@+id/news_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/news_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/burj_khalifa" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/news_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/news_description"
            app:layout_constraintStart_toStartOf="@id/news_description"
            app:layout_constraintTop_toBottomOf="@id/news_description"
            tools:text="@string/the_author" />

        <TextView
            android:id="@+id/news_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="@id/news_description"
            app:layout_constraintStart_toStartOf="@id/news_description"
            app:layout_constraintTop_toBottomOf="@id/news_author"
            tools:text="@string/time_example" />

        <ImageButton
            android:id="@+id/news_share"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_button"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_image_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


