<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".view.account.UpdateProfileFragment">

    <View
        android:id="@+id/update_profile_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/update_profile_button"
        app:layout_constraintEnd_toStartOf="@id/update_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/update_profile_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/update_profile_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="1dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/dimmingBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/update_profile_picture_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/account_picture"
            android:scaleType="centerCrop"
            tools:src="@drawable/burj_khalifa" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_gravity="center"
            android:contentDescription="@string/camera" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/update_profile_login_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:background="@color/transparent"
        android:hint="@string/nickname"
        android:inputType="text"
        android:maxLines="1"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@id/update_profile_line"
        app:layout_constraintEnd_toStartOf="@id/update_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/the_author" />

    <TextView
        android:id="@+id/update_profile_mail_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:maxLines="1"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@id/update_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_profile_line"
        tools:text="smqpro@gmail.com" />

</androidx.constraintlayout.widget.ConstraintLayout>