<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.account.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/signed_in_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGrey"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="56dp"
            app:expandedTitleMarginStart="40dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            app:title="KEK">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp">

                <View
                    android:id="@+id/signed_in_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@id/signed_in_cv"
                    app:layout_constraintTop_toTopOf="@id/signed_in_cv" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/signed_in_cv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/signed_in_picture_iv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/account_picture"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/burj_khalifa" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/signed_in_login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toTopOf="@id/signed_in_line"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/the_author" />

                <TextView
                    android:id="@+id/signed_in_mail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:maxLines="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signed_in_line"
                    tools:text="smqpro@gmail.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="@color/lightGrey">

            <View
                android:id="@+id/signed_in_line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signed_in_switch_theme_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_theme"
                android:drawablePadding="12dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/switch_theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/signed_in_line1" />

            <View
                android:id="@+id/signed_in_line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/signed_in_switch_theme_button" />

            <TextView
                android:id="@+id/signed_in_auth_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_exit"
                android:drawablePadding="12dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="12dp"
                android:text="@string/auth"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/signed_in_line2" />

            <View
                android:id="@+id/signed_in_line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/signed_in_auth_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>